# RustyMailBot

./: .env  .gitignore  Cargo.toml  Readme.md  cleanup-dev-env.sh  start-dev-env.sh
data/dummy_inbox/: email1.txt  email2.txt  email3.txt  email5.txt
data/models/all-MiniLM-L12-v2/: config.json
data/models/all-MiniLM-L12-v2/onnx/: model.onnx  model_O1.onnx  model_O2.onnx  model_O3.onnx  model_O4.onnx  model_quint8_avx2.onnx
dev-stack/: Chart.yaml  values.yaml
dev-stack/templates/: meilisearch-api-keys.yaml  meilisearch-job.yaml  meilisearch-rbac.yaml  meilisearch-secret.yaml  meilisearch.yaml  ollama-model-job.yaml  ollama.yaml
k8s/: meilisearch.yaml
src/: config.rs  convertModel.py  global_session_manager.rs  gmail.rs  gmail_inbox.rs  lib.rs  main.rs  memory_session_store.rs
src/handlers/: chat_handler.rs  mod.rs  oauth_handler.rs  session_handler.rs
src/models/: email.rs  email_db.rs  email_query.rs  global_session_manager.rs  mod.rs  query_builder.rs  user_session.rs  vector_database.rs
src/routes/: app_state.rs  chat_routes.rs  mod.rs  oauth_routes.rs  session_routes.rs
src/services/: chat_service.rs  email_service.rs  embedding_service.rs  gmail_service.rs  llm_service.rs  mod.rs
src/utils/: similarity.rs
static/: index.html
testmain/: Cargo.toml
testmain/src/: main.rs
tests/: main.rs
tests/chat/: chat_service_tests.rs  email_explanation_tests.rs  mod.rs
tests/db/: email_db_tests.rs  email_operations_tests.rs  mod.rs
