[package]
name = "AdukiChatAgent"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
bytes = "1"
log = "0.4.25"
env_logger = "0.11.6"