[package]
name = "AdukiChatAgent"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
log = "0.4.25"
base64 = "0.21.7"
ollama-rs = "0.2.4"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
uuid = { version = "1.14.0", features = ["v4"] }
anyhow = "1.0.96"
chrono = "0.4.39"
regex = "1.11.1"
lazy_static = "1.5.0"
thiserror = "1.0.69"
meilisearch-sdk = "0.28.0"
dotenv = "0.15.0"
url = "2.5.4"


[dev-dependencies]
mockall = "0.11"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"